<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <LinearLayout
            android:id="@+id/main_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/main_text_view"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/suggestion1_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:layout_margin="16dp"
                android:text="@string/playlist_suggestion_1" />

            <Button
                android:id="@+id/suggestion2_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:layout_margin="16dp"
                android:text="@string/playlist_suggestion_2" />

            <Button
                android:id="@+id/suggestion3_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="@dimen/box_size"
                android:layout_height="@dimen/box_size"
                android:layout_margin="16dp"
                android:text="@string/playlist_suggestion_3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/player_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/main_text_view"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/previous_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/player_image_button_description"
                android:src="@drawable/ic_skip_previous_black_24dp" />

            <ImageButton
                android:id="@+id/play_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/player_image_button_description"
                android:src="@drawable/ic_play_arrow_black_24dp" />

            <ImageButton
                android:id="@+id/next_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/player_image_button_description"
                android:src="@drawable/ic_skip_next_black_24dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/main_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/main_description" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="1dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/now_playing_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now_playing"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/explore_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/library_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/setting_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/payment_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:layout_weight="1"/>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>


